# Numerical_methods

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml  sonarcloud.yml
Lab 1/: README.md
Lab 1/doc/: graph1.eps  Отчет по лабораторной 1. Дыбко И.Е., Тихомиров С.И..tex
Lab 1/src/: CMakeLists.txt  Gauss.cpp  Gauss.h  QR decomposition.cpp  QR decomposition.h  main.cpp  matrix_operations.h
Lab 2/src/: CMakeLists.txt  JacobiMethod.h  SeidelMethod.h  SimpleIterationMethod.h  SuccessiveRelaxationMethod.h  main.cpp
Lab2/: README.md
Lab3/: CMakeLists.txt
Linear algebra/Lab3 (Solving interpolation problems)/src/: CMakeLists.txt  NewtonInterpolation.h  SolutionDifferenceEvaluator.nb  SplineInterpolation.h  grid_generators.h  main.cpp
Linear algebra/Lab3 (Solving interpolation problems)/src/data/Runge/: Runge_16_chebyshev_grid.txt  Runge_16_spline_chebyshev_grid.txt  Runge_16_spline_uniform_grid.txt  Runge_32_spline_chebyshev_grid.txt  Runge_32_spline_uniform_grid.txt  Runge_4_chebyshev_grid.txt  Runge_4_spline_chebyshev_grid.txt  Runge_8_chebyshev_grid.txt  Runge_8_uniform_grid.txt
Linear algebra/Lab3 (Solving interpolation problems)/src/data/x/: x_128_spline_chebyshev_grid.txt  x_128_spline_uniform_grid.txt  x_16_spline_chebyshev_grid.txt  x_16_spline_uniform_grid.txt  x_16_uniform_grid.txt  x_32_spline_chebyshev_grid.txt  x_32_spline_uniform_grid.txt  x_4_spline_chebyshev_grid.txt  x_4_spline_uniform_grid.txt  x_64_spline_chebyshev_grid.txt  x_64_spline_uniform_grid.txt  x_8_spline_chebyshev_grid.txt  x_8_spline_uniform_grid.txt  x_spline_uniform_grid.txt
Linear algebra/Lab3 (Solving interpolation problems)/src/data/x^2/: x^2_1024_spline_uniform_grid.txt  x^2_128_spline_uniform_grid.txt  x^2_128_uniform_grid.txt  x^2_16384_spline_uniform_grid.txt  x^2_16_spline_uniform_grid.txt  x^2_2048_spline_uniform_grid.txt  x^2_32_chebyshev_grid.txt  x^2_32_spline_uniform_grid.txt  x^2_4_spline_uniform_grid.txt  x^2_64_chebyshev_grid.txt  x^2_64_spline_uniform_grid.txt  x^2_8_spline_uniform_grid.txt
Linear algebra/Lab4 (Solving the eigenvalue problem)/src/: CMakeLists.txt  FrancisKublanovskayaQR.h  InverseIterationMethod.h
Linear algebra/Lab4 (Solving the eigenvalue problem)/src/data/: EIGEN13.TXT  EIGEN14.TXT  EIGEN16.TXT  EIGEN22.TXT  EIGEN23.TXT  EIGEN28.TXT  EIGEN4.TXT  EIGEN8.TXT
Linear algebra/Lab5 (Solving nonlinear equations)/src/: CMakeLists.txt  FindRoots.h  main.cpp
Linear algebra/Lab5 (Solving nonlinear equations)/src/data/: sys1_1.eps  sys1_1.txt  sys2_1.txt
Mathematical physics/Lab1 (Numerical methods for solving ordinary differential equations)/src/: CMakeLists.txt  adams_bashforth_4th_order.h  euler.h  main.cpp  runge_kutta_4th_order.h
Mathematical physics/Lab2 (Numerical solution of boundary value problems for the one-dimensional heat equation)/src/: CMakeLists.txt  heat_1d_eq_spatial_k.h  main.cpp
(+127 files in other folders)
